--- a/index.html.html
+++ b/index.html.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <style>
+         *{text-align:center;}
+         #fireCanvas{
+	   margin: 0 auto;
+           width: 100%;
+	}
         table{
             border-collapse: collapse;
             border: 1px solidn #000000;
@@ -13,6 +18,7 @@
             border: 1px solid #000000;
             text-align: center;
             vertical-align: center;
+	    horizontal-align: center;
             font-family: monospace;
             font-size: 18px;
             position: relative;
@@ -37,5 +43,6 @@
 <body>
     <div id="fireCanvas"></div>
     <script src="fire.js"></script>
+    <div><h1>Cada pixel representa um cor diferente e são carregados randomicamente para dar um efeito visual de fogo de verdade!</h1></div>
 </body>
 </html>
